--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.stdout.layout.ConversionPattern= %d [%F:%L][%p]:%m%n
 log4j.appender.stdout.encoding=UTF-8
 
 log4j.appender.toInfoLogFile=org.apache.log4j.RollingFileAppender
-log4j.appender.toInfoLogFile.File=lightning/log/info.log
+log4j.appender.toInfoLogFile.File=loginfo/log/info.log
 log4j.appender.toInfoLogFile.MaxFileSize=10MB
 log4j.appender.toInfoLogFile.MaxBackupIndex=10
 log4j.appender.toInfoLogFile.threshold=INFO
@@ -15,7 +15,7 @@ log4j.appender.toInfoLogFile.layout.ConversionPattern= %d [%F:%L][%p]:%m%n
 log4j.appender.toInfoLogFile.encoding=UTF-8
 
 log4j.appender.toErrorLogFile=org.apache.log4j.RollingFileAppender
-log4j.appender.toErrorLogFile.File=lightning/log/error.log
+log4j.appender.toErrorLogFile.File=loginfo/log/error.log
 log4j.appender.toErrorLogFile.MaxFileSize=10MB
 log4j.appender.toErrorLogFile.MaxBackupIndex=10
 log4j.appender.toErrorLogFile.threshold=ERROR
